# vendbot-unified

./: .dockerignore  .gitignore  Dockerfile  README.md  init.ps1  python_files.txt  railway.json  requirements.txt  structure.txt
backend/: .gitignore  Dockerfile  README.md  add_jwt_key.py  add_test_data.py  alembic.ini  analyze_password.py  check_connection.py  check_connection_stability.py  check_database.py  check_environment.py  check_tables.py  cleanup_tables.py  create_admin.py  create_more_test_users.py  create_test_data.py  create_test_hoppers.py  create_test_user.py  create_vending_tables.py  docker-compose.prod.yml  fix_db_url.py  get_telegram_id.py  list_users.py  main.py  main_final.py  main_mvp.py  main_simple.py  main_stable.py  pyproject.toml  requirements.txt  requirements.txt.backup  run_bot.py  simple_run_bot.py  start_bot.py  test_connection_variants.py  test_new_password.py  test_supabase.py  test_updated_connection.py  update_env.py
backend/alembic/: env.py  env_backup.py  env_clean.py
backend/api/: main.py  routes.py  websocket.py
backend/archive/: add_handler.py  bot_handlers.py  fix_commands.txt  handler_to_add.txt  main_backup.py  main_stable.py  main_with_handler.py  main_with_handler_fixed.py  main_working.py  main_working_final.py  recreate_database.py  simple_bot.py
backend/bot/: __init__.py  filters.py  main.py  middlewares.py  states.py
backend/core/: auth.py  config.py  config_backup.py  config_fixed.py  config_original.py  logging.py  monitoring.py  redis_config.py
backend/db/: database.py
backend/docs/: AUDIT_MODULE.md
(+106 files in other folders)
