[tool.poetry]
name = "vendbot-backend"
version = "2.0.0"
description = "Unified VendBot Backend"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
aiogram = "^3.3.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
alembic = "^1.12.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
pydantic = "^2.0"
python-jose = "^3.3.0"
aiofiles = "^23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0"
ruff = "^0.1.0"